atualizei os nomes

--- a/javascript/ex001/index.html
+++ b/javascript/ex001/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -7,10 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Meu primeiroJavaScript</h1>
+    <h1>Andrei Monteiro<h1></h1>
+    
 
     <script>
-        alert("Olá, Mundo!")
+        alert("site criado por Andrei")
     </script>
 </body>
 </html>
