--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -5,20 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avengenros</title>
-    <link rel="stylesheet" href="css/style.css">i
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    <h1>Titulo da primeira imagem</h1>
+    <h1> <output id="titulo"> Titulo da 1°imagem </output> </h1>
 <!-- ******************Miniaturas -->
     <div class="miniaturas">
-
+        <div class="imagem">
+            <img src="img/capitao.jpg" onmouseover="trocar('img/capitao.jpg', 'CAPITÃO AMÉRICA')">
+        </div>
+        <div class="imagem">
+            <img src="img/gaviao.jpg" onmousemove="trocar('img/gaviao.jpg', 'GAVIÃO ARQUEIRO')">
+        </div>
+        <div class="imagem">
+            <img src="img/homem_ferro.jpg" onmousemove="trocar('img/homem_ferro.jpg', 'HOMEM DE FERRO')">
+        </div>
+        <div class="imagem">
+            <img src="img/hulk.jpg" onmousemove="trocar('img/hulk.jpg', 'HULK')">
+        </div>
+        <div class="imagem">
+            <img src="img/thor.jpg" onmousemove="trocar('img/thor.jpg', 'THOR')">
+        </div>
+        <div class="imagem">
+            <img src="img/viuva.jpg" onmousemove="trocar('img/viuva.jpg', 'VIUVA NEGRA')">
+        </div>
     </div>
 <!--*******************imagem principal -->
     <div class="principal">
-
+        <img src="img/capitao.jpg" id="imagem_principal">
     </div>
-<!--*******************egenda das imagens -->
+<!--*******************legenda das imagens -->
     <div class="legenda">
         Legenda da Primeira imagem
     </div>
